lanecwe-Prod/src/objects/Product_Mappings__c.object
<CustomObject>
    <description>Provides mappings between SFDC and other systems</description>
    <fields>
        <fullName>SFDC_PB_Entry_ID__c</fullName>
        <description>ID of SFDC price book entry</description>
        <inlineHelpText>ID of SFDC price book entry</inlineHelpText>
        <label>SFDC PB Entry ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_ID__c</fullName>
        <description>Product ID of SFDC product object</description>
        <label>SFDC Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Name__c</fullName>
        <description>Product name of Salesforce</description>
        <label>SFDC Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Product_Name__c</fullName>
        <description>Product Name of source system</description>
        <inlineHelpText>Product Name of source system</inlineHelpText>
        <label>Source Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Name of source system</description>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFDC_PB_Entry_ID__c</columns>
        <columns>SFDC_Product_ID__c</columns>
        <columns>SFDC_Product_Name__c</columns>
        <columns>Source_Product_Name__c</columns>
        <columns>Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Product Mappings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>